--- a/usuarios/templates/tste.html
+++ b/usuarios/templates/tste.html
@@ -1,18 +1,17 @@
-{% extends 'base.html' %}
-
-{% block 'titulo' %}
-Login
-{% endblock %}
-<div>
-
-{% block 'bodyy' %}
-    <body>
-{% block 'conteudo' %}
-    <div class="container">
+<!doctype html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  </head>
+  <body>
+  <div class="container">
     <br>
         {% if status == '1' %}
             <div class="alert alert-danger" role="alert">
-            Senha incorreta!
+            Usuário e/ou senha incorretos!
             </div>
         {% endif %}
         {% if status == '2' %}
@@ -30,11 +29,6 @@ Login
             Deslogado com sucesso!
             </div>
         {% endif %}
-        {% if status == '5' %}
-            <div class="alert alert-danger" role="alert">
-            Email não cadastrado no sistema!
-            </div>
-        {% endif %}
 <br>
         <form method="POST" action="{% url 'valida_login' %}">{% csrf_token %}
             <label>Email:</label>
@@ -47,6 +41,6 @@ Login
         </form>
     </div>
 
-{% endblock %}
-    </body>
-{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </body>
+</html>
