--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -1,13 +1,16 @@
-{% extends 'base.html' %}
+{% load static %}
+<!doctype html>
+<html lang="pt-BR">
 
-{% block 'titulo' %}
-Login
-{% endblock %}
-<div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Login</title>
+      <link rel="stylesheet" type="text/css" href="{% static 'usuarios/css/styleUsuarios.css' %}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  </head>
 
-{% block 'bodyy' %}
-    <body>
-{% block 'conteudo' %}
+<body>
     <div class="container">
     <br>
         {% if status == '1' %}
@@ -35,7 +38,7 @@ Login
             Email não cadastrado no sistema!
             </div>
         {% endif %}
-<br>
+        <br>
         <form method="POST" action="{% url 'valida_login' %}">{% csrf_token %}
             <label>Email:</label>
             <input name="email" class="form-control" type="text" placeholder="Digite seu email">
@@ -46,7 +49,5 @@ Login
             <a class="btn btn-warning" href="{% url 'cadastro' %}"> Cadastrar </a>
         </form>
     </div>
-
-{% endblock %}
-    </body>
-{% endblock %}
+</body>
+</html>
