--- a/tarefa/templates/index.html
+++ b/tarefa/templates/index.html
@@ -1,44 +1,146 @@
 {% load static %}
 <!doctype html>
 <html lang="pt-BR">
-
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tarefas</title>
-      <link rel="stylesheet" type="text/css" href="{% static 'tarefa/css/styleTarefas.css' %}" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="{% static 'tarefa/css/styleTarefas.css' %}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+</head>
+<body>
 <div class="container">
+
     <table class="table table-striped table-hover table-bordered">
-  <thead>
-    <tr>
-        <th scope="col">Status da tarefa</th>
-        <th scope="col">Tarefa</th>
-        <th scope="col">Data</th>
-        <th scope="col">Hora inicial</th>
-        <th scope="col">Hora termino</th>
-        <th scope="col">Local</th>
-        <th scope="col">Observações</th>
-        <th scope="col">Ações</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for tarefa in tarefas%}
-    <tr>
-        <th scope="row">{{tarefa.status_compromisso}}</th>
-        <td>{{ tarefa.nome_compromisso }}</td>
-        <td>{{ tarefa.data_compromisso }}</td>
-        <td>{{ tarefa.hora_inicio}}</td>
-        <td>{{ tarefa.hora_fim }}</td>
-        <td>{{ tarefa.local_compromisso }}</td>
-        <td>{{ tarefa.observacoes }}</td>
-        <td> <button class="btn btn-info btn-sm">Ações</button> </td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
-<a class="btn btn-danger btn-lg" href="{% url 'sair' %}"> Sair</a>
+        <thead>
+        <tr>
+            <th scope="col">Status da tarefa</th>
+            <th scope="col">Tarefa</th>
+            <th scope="col">Data</th>
+            <th scope="col">Hora inicial</th>
+            <th scope="col">Hora termino</th>
+            <th scope="col">Local</th>
+            <th scope="col">Observações</th>
+            <th scope="col">Ações</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        {% for tarefa in tarefas %}
+            <tr>
+                <div class="modal fade" id="{{ tarefa.id }}" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title"
+                                    id="exampleModalLabel">{{ tarefa.nome_compromisso.capitalize }}</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="input-group input-group-sm mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroup-sizing-sm">Compromisso</span>
+                                        </div>
+                                        <input type="text" class="form-control" aria-label="Small"
+                                               aria-describedby="inputGroup-sizing-sm"
+                                               value="{{ tarefa.nome_compromisso.capitalize }}">
+                                    </div>
+                                    <div class="input-group mb-3">
+                                        <div class="input-group-prepend">
+                                            <label class="input-group-text" for="inputGroupSelect01">Status</label>
+                                        </div>
+                                        <select class="custom-select" id="inputGroupSelect01">
+                                            <option selected value="agendado">Agendado</option>
+                                            <option value="realizado">Realizado</option>
+                                            <option value="cancelado">Cancelado</option>
+                                        </select>
+                                    </div>
+                                    <div class="input-group input-group-sm mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroup-sizing-sm">Data</span>
+                                        </div>
+                                        <input type="date" class="form-control" aria-label="Small"
+                                               aria-describedby="inputGroup-sizing-sm"
+                                               value="{{ tarefa.data_compromisso|date:"Y-m-d" }}">
+                                    </div>
+                                    <div class="input-group input-group-sm mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroup-sizing-sm">Hora inicio:</span>
+                                        </div>
+                                        <input type="time" class="form-control" aria-label="Small"
+                                               aria-describedby="inputGroup-sizing-sm"
+                                               value="{{ tarefa.hora_inicio }}">
+                                    </div>
+                                    <div class="input-group input-group-sm mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"
+                                                  id="inputGroup-sizing-sm">Hora término:</span>
+                                        </div>
+                                        <input type="time" class="form-control" aria-label="Small"
+                                               aria-describedby="inputGroup-sizing-sm"
+                                               value="{{ tarefa.hora_fim }}">
+                                    </div>
+                                    <div class="input-group input-group-sm mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroup-sizing-sm">Local</span>
+                                        </div>
+                                        <input type="text" class="form-control" aria-label="Small"
+                                               aria-describedby="inputGroup-sizing-sm"
+                                               value="{{ tarefa.local_compromisso }}">
+                                    </div>
+                                    <div class="input-group input-group-sm mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroup-sizing-sm">Observações</span>
+                                        </div>
+                                        <input type="text" class="form-control" aria-label="Small"
+                                               aria-describedby="inputGroup-sizing-sm"
+                                               value="{{ tarefa.observacoes }}">
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                                <button type="button" class="btn btn-primary">Salvar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <th scope="row">{{ tarefa.status_compromisso.capitalize }}</th>
+                <td>{{ tarefa.nome_compromisso }}</td>
+                <td>{{ tarefa.data_compromisso }}</td>
+                <td>{{ tarefa.hora_inicio }}</td>
+                <td>{{ tarefa.hora_fim }}</td>
+                <td>{{ tarefa.local_compromisso }}</td>
+                <td>{{ tarefa.observacoes }}</td>
+                <td>
+                    <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal"
+                            data-target="#{{ tarefa.id }}">
+                        Ações
+                    </button>
+                    <i class="bi bi-trash-fill"></i>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <a class="btn btn-danger btn-lg" href="{% url 'sair' %}"> Sair</a>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
+</html>
