--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,53 +1,61 @@
-{% extends 'base.html' %}
+{% load static %}
+<!doctype html>
+<html lang="pt-BR">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cadastro</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'usuarios/css/styleUsuario.css' %}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-{% block 'titulo' %} Cadastro {% endblock %}
+</head>
+<body>
 
-
-{% block 'conteudo' %}
-
-    <div class="container">
-        <br>
-        {% if status == '0' %}
-            <div class="alert alert-success" role="alert">
+<div class="container">
+    <br>
+    {% if status == '0' %}
+        <div class="alert alert-success" role="alert">
             Usuário cadastrado com sucesso!
-            </div>
-        {% endif %}
-        {% if status == '1' %}
-            <div class="alert alert-danger" role="alert">
+        </div>
+    {% endif %}
+    {% if status == '1' %}
+        <div class="alert alert-danger" role="alert">
             Preencha os campos de nome e email
-            </div>
-        {% endif %}
-        {% if status == '2' %}
-            <div class="alert alert-danger" role="alert">
+        </div>
+    {% endif %}
+    {% if status == '2' %}
+        <div class="alert alert-danger" role="alert">
             Email já cadastrado
-            </div>
-        {% endif %}
-        {% if status == '3' %}
-            <div class="alert alert-danger" role="alert">
+        </div>
+    {% endif %}
+    {% if status == '3' %}
+        <div class="alert alert-danger" role="alert">
             Erro no sistema!
-            </div>
-        {% endif %}
-        {% if status == '4' %}
-            <div class="alert alert-danger" role="alert">
+        </div>
+    {% endif %}
+    {% if status == '4' %}
+        <div class="alert alert-danger" role="alert">
             Sua senha deve ter mais de 8 caracteres
-            </div>
-        {% endif %}
+        </div>
+    {% endif %}
 
 
-<br>
-        <form method="POST" action="{% url 'valida_cadastro' %}">{% csrf_token %}
-            <label>Nome:</label>
-            <input name="nome" class="form-control" type="text" placeholder="Digite seu nome">
-            <label>Email:</label>
-            <input name="email" class="form-control" type="text" placeholder="Digite seu email">
-            <label>Senha:</label>
-            <input name="senha" class="form-control" type="password" placeholder="Digite sua senha">
-{#            <label>CPF:</label>#}
-{#            <input name="cpf" class="form-control" type="text" placeholder="Digite seu cpf">#}
-            <br>
-            <input class="btn btn-info btn-success" type="submit" value="Cadastrar">
-            <a class="btn btn-warning" href="{% url 'login' %}"> Login </a>
-        </form>
-    </div>
+    <br>
+    <form method="POST" action="{% url 'valida_cadastro' %}">{% csrf_token %}
+        <label>Nome:</label>
+        <input name="nome" class="form-control" type="text" placeholder="Digite seu nome">
+        <label>Email:</label>
+        <input name="email" class="form-control" type="text" placeholder="Digite seu email">
+        <label>Senha:</label>
+        <input name="senha" class="form-control" type="password" placeholder="Digite sua senha">
+        {#            <label>CPF:</label>#}
+        {#            <input name="cpf" class="form-control" type="text" placeholder="Digite seu cpf">#}
+        <br>
+        <input class="btn btn-info btn-success" type="submit" value="Cadastrar">
+        <a class="btn btn-warning" href="{% url 'login' %}"> Login </a>
+    </form>
+</div>
 
-{% endblock %}
+</body>
+</html>
