--- a/tarefa/templates/index.html
+++ b/tarefa/templates/index.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tarefas</title>
+    <script src="{% static 'tarefa/js/scriptTarefas.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'tarefa/css/styleTarefas.css' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
 </head>
 <body>
+
 <div class="container">
 
     <table class="table table-striped table-hover table-bordered">
@@ -63,8 +66,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form method="POST" action="{% url 'add_Tarefa' %}" class="needs-validation"
-                              novalidate>{% csrf_token %}
+                        <form method="POST" action="{% url 'add_Tarefa' %}">{% csrf_token %}
                             <input hidden name="id_compromisso" type="text">
                             <div class="input-group input-group-sm mb-3">
                                 <div class="input-group-prepend">
@@ -72,14 +74,14 @@
                                 </div>
                                 <input name="nome_compromisso" type="text" class="form-control"
                                        aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm" required
-                                >
+                                       aria-describedby="inputGroup-sizing-sm" id="validationDefault02" required>
                             </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <label class="input-group-text" for="inputGroupSelect01">Status</label>
                                 </div>
-                                <select name="status_compromisso" class="custom-select" id="inputGroupSelect01">
+                                <select required name="status_compromisso" class="custom-select"
+                                        id="inputGroupSelect01">
 
                                     <option selected
                                             value="agendado">Agendado
@@ -94,7 +96,7 @@
                                 </div>
                                 <input name="data_compromisso" type="date" class="form-control"
                                        aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm"
+                                       aria-describedby="inputGroup-sizing-sm" required
                                 >
                             </div>
                             <div class="input-group input-group-sm mb-3">
@@ -102,7 +104,7 @@
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Hora inicio:</span>
                                 </div>
                                 <input name="hora_inicio" type="time" class="form-control" aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm"
+                                       aria-describedby="inputGroup-sizing-sm" required
                                 >
                             </div>
                             <div class="input-group input-group-sm mb-3">
@@ -111,7 +113,7 @@
                                                   id="inputGroup-sizing-sm">Hora término:</span>
                                 </div>
                                 <input name="hora_fim" type="time" class="form-control" aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm"
+                                       aria-describedby="inputGroup-sizing-sm" required
                                 >
                             </div>
                             <div class="input-group input-group-sm mb-3">
@@ -120,7 +122,7 @@
                                 </div>
                                 <input name="local_compromisso" type="text" class="form-control"
                                        aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm"
+                                       aria-describedby="inputGroup-sizing-sm" required
                                 >
                             </div>
                             <div class="input-group input-group-sm mb-3">
@@ -128,7 +130,7 @@
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Observações</span>
                                 </div>
                                 <input name="observacoes" type="text" class="form-control" aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm"
+                                       aria-describedby="inputGroup-sizing-sm" required
                                 >
                             </div>
                             <div class="modal-footer">
@@ -166,13 +168,14 @@
                                         <input name="nome_compromisso" type="text" class="form-control"
                                                aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.nome_compromisso.capitalize }}">
+                                               value="{{ tarefa.nome_compromisso.capitalize }}" required>
                                     </div>
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <label class="input-group-text" for="inputGroupSelect01">Status</label>
                                         </div>
-                                        <select name="status_compromisso" class="custom-select" id="inputGroupSelect01">
+                                        <select name="status_compromisso" class="custom-select" id="inputGroupSelect01"
+                                                required>
                                             {% if tarefa.status_compromisso.lower == 'agendado' %}
                                                 <option selected
                                                         value="{{ tarefa.get_status_compromisso_display }}">{{ tarefa.get_status_compromisso_display }}</option>
@@ -198,7 +201,7 @@
                                         <input name="data_compromisso" type="date" class="form-control"
                                                aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.data_compromisso|date:"Y-m-d" }}">
+                                               value="{{ tarefa.data_compromisso|date:"Y-m-d" }}" required>
                                     </div>
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
@@ -206,7 +209,7 @@
                                         </div>
                                         <input name="hora_inicio" type="time" class="form-control" aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.hora_inicio }}">
+                                               value="{{ tarefa.hora_inicio }}" required>
                                     </div>
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
@@ -215,7 +218,7 @@
                                         </div>
                                         <input name="hora_fim" type="time" class="form-control" aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.hora_fim }}">
+                                               value="{{ tarefa.hora_fim }}" required>
                                     </div>
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
@@ -224,7 +227,7 @@
                                         <input name="local_compromisso" type="text" class="form-control"
                                                aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.local_compromisso }}">
+                                               value="{{ tarefa.local_compromisso }}" required>
                                     </div>
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
@@ -232,7 +235,7 @@
                                         </div>
                                         <input name="observacoes" type="text" class="form-control" aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.observacoes }}">
+                                               value="{{ tarefa.observacoes }}" required>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar
@@ -278,7 +281,7 @@
                     <td>{{ tarefa.local_compromisso }}</td>
                     <td>{{ tarefa.observacoes }}</td>
                     <td>
-                        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal"
                                 data-bs-target="#edit{{ tarefa.id }}">
                             Editar
                         </button>
