--- a/tarefa/templates/index.html
+++ b/tarefa/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'tarefa/css/styleTarefas.css' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-   <script src="https://kit.fontawesome.com/2da1d399c4.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2da1d399c4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
 </head>
@@ -20,12 +20,23 @@
         <h4><i class="fa-solid fa-clipboard-list"></i> Agenda</h4>
     </div>
 
+
+
     <div>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add_Tarefa">
-       <i class="fa-regular fa-plus"></i> Adicionar Tarefa
-    </button>
-    <a class="btn btn-danger " href="{% url 'sair' %}"> Sair <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
-        </div>
+        <form method="POST" class="testes" action="{% url 'exportar_planilha' %}">
+                    <input type="hidden" name="csv_sender" value="{{ tarefas }}"/>
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-success" name="submit">
+                        <a>Baixar Planilha</a>
+                    </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add_Tarefa">
+            <i class="fa-regular fa-plus"></i> Adicionar Tarefa
+        </button>
+        <a class="btn btn-danger " href="{% url 'sair' %}"> Sair <i
+                class="fa-solid fa-arrow-right-from-bracket"></i></a>
+        </form>
+
+    </div>
 </div>
 <br>
 <div class="container">
@@ -367,12 +378,12 @@
                     <td>
                         <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal"
                                 data-bs-target="#edit{{ tarefa.id }}">
-                           <i class="fa-solid fa-pen-to-square"></i> Editar
+                            <i class="fa-solid fa-pen-to-square"></i> Editar
                         </button>
 
                         <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal"
                                 data-bs-target="#del{{ tarefa.id }}">
-                           <i class="fa-solid fa-trash-can"></i> Apagar
+                            <i class="fa-solid fa-trash-can"></i> Apagar
                         </button>
                     </td>
                 </div>
