--- a/usuarios/static/usuarios/css/styleUsuarioCadastro.css
+++ b/usuarios/static/usuarios/css/styleUsuarioCadastro.css
@@ -10,13 +10,18 @@ body {
     overflow: hidden;
 }
 
+
 .conteudo {
-    display: inline-flex;
     background-color:lightpink;
-    height: 100%;
-    justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
+.imagemBG{
+     width: 100%;
+}
 .alert-danger{
     height: 4.5rem;
 }
@@ -27,4 +32,20 @@ body {
     flex-direction: column;
     justify-items: flex-start;
     padding-top: 5rem;
+    height: 100vh;
+}
+
+
+@media (max-width: 767px){
+    .conteudo{
+        height: 30%;
+    }
+
+    .col-6{
+        width: 100%;
+    }
+
+    .imagemBG{
+     width: 50%;}
+
 }
