--- a/tarefa/static/tarefa/css/styleTarefas.css
+++ b/tarefa/static/tarefa/css/styleTarefas.css
@@ -9,8 +9,8 @@
 body {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
     display: flex;
+    overflow-x: hidden;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -18,6 +18,7 @@ body {
 
 .container {
     background-color: honeydew;
+    /*background-color: red;*/
     border-radius: 5px;
     padding-bottom: 1rem;
 }
@@ -31,4 +32,26 @@ body {
 .hahs{
     display: inline;
     margin-left: 0.5rem;
+}
+.buttonMobile{
+    display:none;
+}
+
+@media (max-width: 991px){
+    .logout{
+        margin-top: 0.8rem;
+    }
+}
+
+@media (max-width: 768px){
+    body{
+        height: 100%;
+        padding: 0.8rem;
+    }
+    .btn{
+        display: none;
+    }
+    .buttonMobile{
+        display: inline-block;
+    }
 }
